tests/ui/closures/closure-return-block-note-issue-155670.stderr
error[E0308]: mismatched types
  --> $DIR/closure-return-block-note-issue-155670.rs:9:9
   |
LL |         SmolStr
   |         ^^^^^^^ expected `String`, found `SmolStr`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
